# godot-hub

./: .prettierrc  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  event.rs  godot_website.rs  lib.rs  main.rs  state.rs
src-tauri/src/application/: error.rs  event.rs  mod.rs
src-tauri/src/application/services/: download.rs  install.rs  installation.rs  installer.rs  mod.rs  release.rs  task.rs  version.rs
src-tauri/src/application/utils/: event.rs  fs.rs  mod.rs  sync.rs  zip.rs
src-tauri/src/infrastructure/: godot_website.rs  mod.rs
src-tauri/src/infrastructure/godot_website/: client.rs  dtos.rs  mod.rs  providers.rs
src-tauri/src/ipc/: commands.rs  dtos.rs  emitter.rs
src-tauri/src/ipc/features/install/: commands.rs  dtos.rs  emitter.rs
src-tauri/src/ipc/features/version/: commands.rs  dtos.rs  emitter.rs
src-tauri/src/presentation/ipc/: dtos.rs  mod.rs
src-tauri/src/presentation/ipc/features/: mod.rs
src-tauri/src/presentation/ipc/features/install/: commands.rs  dtos.rs  emitter.rs  events.rs  mod.rs
src-tauri/src/presentation/ipc/features/release/: commands.rs  dtos.rs  events.rs  mod.rs
src-tauri/src/presentation/ipc/features/version/: commands.rs  dtos.rs  emitter.rs  events.rs
src-tauri/src/services/: download.rs  install.rs  mod.rs  task.rs  version.rs
src-tauri/src/utils/: zip.rs
src/components/: Menu.tsx  Modal.tsx  Progress.tsx  ProgressBar.tsx  SearchBox.tsx
src/layouts/: RootLayout.tsx
src/lib/: commands.ts
src/lib/ipc/: commands.ts  types.ts
src/lib/ipc/features/install/: commands.ts  events.ts  types.ts
src/lib/ipc/features/release/: commands.ts  events.ts  types.ts
src/lib/ipc/features/version/: commands.ts  events.ts  types.ts
src/pages/installs/: InstallListPage.tsx  InstallsInstallPage.tsx  InstallsListPage.tsx  NewInstallPage.tsx
